--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
         <meta charset="UTF-8">
         <title>Shunpei Norihama</title>
         <meta name="description" content="乘濵駿平のホームページ">
-        <link rel="icon" type="image/png" href="images/favicon.png">
+        <link rel="icon" type="image/png" href="favicon.png">
 
     <!-- CSS -->
-        <link href="css/style.css" rel="stylesheet">
+        <link href="style.css" rel="stylesheet">
         <script>
             (function(d) {
                 var config = {
@@ -29,7 +29,7 @@
             <div class="mainpart">
             
             <div class="self-intro content">
-                <img class="self-photo" src="images/self-photo.png" alt="乘濵駿平">
+                <img class="self-photo" src="self-photo.png" alt="乘濵駿平">
                 <div class="introduction">
                     <h3 class="intro-name">乘濵 駿平</h3>
                     <p class="eng-name">Shunpei Norihama</p>
@@ -48,7 +48,7 @@
                 <h2 class="title-white">University Life</h2>
                 <p class="univ1">筑波大学附属駒場中・高等学校から<br>東京大学前期教養学部文科Ⅱ類に入学</p>
                 <p class="univ2">→進学選択で<span>工学部電子情報工学科</span>へ理転</p>
-                <a href="https://note.com/norihama/m/m3bc4d1ecfd6b"><img class="riten-note" src="images/riten-note.png" alt="東大理転激闘記 note"></a>
+                <a href="https://note.com/norihama/m/m3bc4d1ecfd6b"><img class="riten-note" src="riten-note.png" alt="東大理転激闘記 note"></a>
                 <p class="riten-info">noteで連載中！</p>
             </div>
 
@@ -56,7 +56,7 @@
                 <h2 class="title-black">Club Activities</h2>
                 <p class="club-info">農業×地域おこしサークル「<span>東大むら塾</span>」にて<br>
                 副代表兼飯舘村GM（グループマネージャー）を務め、<br>飯舘村での地域おこし活動を進めております。</p>
-                <a href="https://note.com/marbling_inc/n/n6a6a7ea5cc3c"><img class="murajuku-note" src="images/murajuku-note.png" alt="東大むら塾 note"></a>
+                <a href="https://note.com/marbling_inc/n/n6a6a7ea5cc3c"><img class="murajuku-note" src="murajuku-note.png" alt="東大むら塾 note"></a>
                 <p class="mura-info">noteに記事あります！</p>
             </div>
 
